--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 		<p>Um curso que explora os benefícios de usar o git como ferramenta de controle de versão para projetos em qualquer linguagem, em qualquer plataforma.</p>
 
-		<h3>Principais benefícios:</h3>
+		<p>Paragráfo interativo</p>
+
+		<h3>Benefícios:</h3>
 		<ul>
 			<li>Funciona de maneira distribuída.</li>
 			<li>Permite a edição concorrente de arquivos do projeto.</li>
